--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "react-multi-carousel": "^2.8.5",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
